feat (BE): add payment api CRUD
